[package]
name = "sthub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
actix-files = "0.6.6"
actix-web = "4.11.0"
clap = { version = "4.5.43", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
actix-rewrite = { version = "*", path = "includes/actix-services/actix-rewrite" }
assertables = "9.8.2"
awc = "3.7.0"
