[package]
name = "actix-authn"
version = "0.1.0"
edition = "2024"

[features]
default       = ["basic", "basic_session"]
basic         = ["dep:base64", "dep:md-5", "dep:crypt3_rs"]
basic_session = ["basic", "dep:actix-session"]

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"], optional = true }
actix-web = { version = "4.11.0", default-features = false }
base64 = { version = "0.22.1", optional = true }
crypt3_rs = { version = "0.1.1", optional = true }
futures-core = { version = "0.3.31", default-features = false }
md-5 = { version = "0.10.6", optional = true }
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.19"

