[package]
name = "actix-fastcgi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = { git = "https://github.com/imgurbot12/actix-web.git", branch = "feat/pathbuf", version = "0.6.6" }
actix-http = { version = "3.11.0", default-features = false }
actix-service = "2.0.3"
actix-web = { version = "4.11.0", default-features = false }
actix-web-lab = { version = "0.24.2", default-features = false }
deadpool = { version = "0.12.2", features = ["managed"], default-features = false }
derive_more = { version = "2.0.1", features = ["display"] }
fastcgi-client = "0.10.0"
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
http = "0.2.7"
httparse = "1.10.1"
pin-project = "1.1.10"
tokio = { version = "1.46.1", default-features = false }
tokio-util = { version = "0.7.15", features = ["io"] }
tracing = "0.1.41"

[dev-dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ['macros'] }
tracing-subscriber = "0.3.19"
